Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-68711

QML TextEdit type does not receive Keys.onShortcutOverride

    XMLWordPrintable

Details

    • 0a92b02f1784a8934490633edcfed79fc685bfa2 (qt/qtdeclarative/personal/shausman/type-inference)

    Description

      When having a Shortcut set to the parent item, the child item TextEdit does not receive the signal for shortcut override.

      When using other components such as Item or TextInput, the Keys.onShortcutOverride is properly called.

      Steps to reproduce:

      • Run attached sample
      • Press Escape (that is set as a shortcut in the application)
      • EXPECTED: "Keys.onShortcutOverride" text is printed in console
      • ACTUAL: Keys.onShortcutOverride code is never called

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            smd Jan Arve
            jussi_witick Jussi Witick
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes